--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username: JulietteHoisnard
-
+timezone: Europe/Berlin
 # Build settings
 theme: minima
 plugins:
