--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@
 title: Juliette's blog
 # email: juliette@hoisnard.fr
 description: >- # this means to ignore newlines until "baseurl:"
-  Welcome on Juliette's blog! Learn a lot about coding cooking travelling and more!
+  Welcome on Juliette's blog! Learn a lot about coding cooking thinking travelling and more!
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username: JulietteHoisnard
 timezone: Europe/Berlin
 # Build settings
-theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
 # Exclude from processing.
