--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Juliette's blog
+title: Harmony
 # email: juliette@hoisnard.fr
 description: >- # this means to ignore newlines until "baseurl:"
-  Welcome on Juliette's blog! Learn a lot about coding cooking thinking travelling and more!
+  Welcome on Harmony, Juliette's blog! Learn a lot about coding cooking thinking travelling and more!
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
