--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,12 @@ timezone: Europe/Berlin
 # Build settings
 theme: minima
 plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
   - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
